# minirag

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
.jules/: bolt.md
minirag/: __init__.py  chunker.py  cli.py  hybrid.py  index.py  retriever.py
tests/: test_features.py  test_smoke.py
